updated readme and html

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="main_menu">
-        <a href="/analysis_g_const_m_diff" class="menu_btn">Фиксированный радиус объекта / варьируется число омматидиев</a>
-        <a href="/analysis_g_const_l_diff" class="menu_btn">Фиксированный радиус объекта / варьируется радиус глаза</a>
-        <a href="/analysis_g_const_h_diff" class="menu_btn">Фиксированный радиус объекта / варьируется расстояние между глазами</a>
-        <a href="/analysis_g_const_r_diff" class="menu_btn">Фиксированный радиус объекта / варьируется максимальная дистанция до объекта</a>
-        <a href="/analysis_g_const" class="menu_btn">Фиксированный радиус объекта / сводный анализ</a>
+        <a href="/analysis_g_const_m_diff" class="menu_btn">Fixed g_obj / varies m</a>
+        <a href="/analysis_g_const_l_diff" class="menu_btn">Fixed g_obj / varies l</a>
+        <a href="/analysis_g_const_h_diff" class="menu_btn">Fixed g_obj / varies h</a>
+        <a href="/analysis_g_const_r_diff" class="menu_btn">Fixed g_obj / varies r_max</a>
+        <a href="/analysis_g_const" class="menu_btn">Fixed g_obj / summary analysis</a>
     </div>
 {% endblock %}
