--- a/app/templates/analysis_result_g_const.html
+++ b/app/templates/analysis_result_g_const.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <form class="main_menu" method="post" enctype="multipart/form-data">
-        <p>Датасеты с варьируюмщися числом омматидиев</p>
-        <input type="file" name="file1[]" class="input" webkitdirectory directory multiple/>
-    <p>Датасеты с варьируюмщися расстоянием между глазами</p>
-        <input type="file" name="file2[]" class="input"  webkitdirectory directory multiple/>
-    <p>Датасеты с варьируюмщися радиусом глаза</p>
-        <input type="file" name="file3[]" class="input" webkitdirectory directory multiple/>
-    <p>Датасеты с варьируюмщися расстоянием до объекта</p>
-        <input type="file" name="file4[]" class="input" webkitdirectory directory multiple/>
-        <button class="menu_btn">Подтвердить</button>
+        <p>Datasets with varied m</p>
+            <input type="file" name="file1[]" class="input" webkitdirectory directory multiple/>
+        <p>Datasets with varied h</p>
+            <input type="file" name="file2[]" class="input"  webkitdirectory directory multiple/>
+        <p>Datasets with varied l</p>
+            <input type="file" name="file3[]" class="input" webkitdirectory directory multiple/>
+        <p>Datasets with varied r_obj</p>
+            <input type="file" name="file4[]" class="input" webkitdirectory directory multiple/>
+        <button class="menu_btn">Submit</button>
 </form>
 {% if im_path1 or im_path2 or im_path3 or im_path4 %}
 <div class="flex-bar">
@@ -29,7 +29,7 @@
 
     </div>
     <div class="tab" style="width: 20%;display: flex; flex-direction: column;">
-        <h3>Информация о датасетах</h3>
+        <h3>Datasets' info</h3>
         {% for item in meta_dict %}
             <p><b>{{item}}</b>: {{meta_dict[item]}}</p>
         {% endfor %}
