--- a/app/templates/clean_dataset.html
+++ b/app/templates/clean_dataset.html
@@ -2,9 +2,9 @@
 {% block content %}
 <div class="main_menu">
     <form method="post" enctype="multipart/form-data">
-        <p>Выберите файл с набором данных для очистки</p>
+        <p>Choose file with dataset</p>
         <input type="file" name="file" class="input"/>
-        <button class="menu_btn">Подтвердить</button>
+        <button class="menu_btn">Submit</button>
     </form>
 </div>
 {% endblock %}
