--- a/app/templates/generate_for_analysis.html
+++ b/app/templates/generate_for_analysis.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="main_menu">
-        <a href="/g_const_m_diff" class="menu_btn">Фиксированный радиус объекта / варьируется число омматидиев</a>
-        <a href="/g_const_l_diff" class="menu_btn">Фиксированный радиус объекта / варьируется радиус глаза</a>
-        <a href="/g_const_h_diff" class="menu_btn">Фиксированный радиус объекта / варьируется расстояние между глазами</a>
-        <a href="/g_const_r_diff" class="menu_btn">Фиксированный радиус объекта / варьируется максимальная дистанция до объекта</a>
+        <a href="/g_const_m_diff" class="menu_btn">Fixed g_obj / varies m</a>
+        <a href="/g_const_l_diff" class="menu_btn">Fixed g_obj / varies l</a>
+        <a href="/g_const_h_diff" class="menu_btn">Fixed g_obj / varies h</a>
+        <a href="/g_const_r_diff" class="menu_btn">Fixed g_obj / varies r_max</a>
     </div>
 {% endblock %}
