--- a/app/templates/analysis_result.html
+++ b/app/templates/analysis_result.html
@@ -2,9 +2,9 @@
 {% block content %}
 <div class="main_menu">
     <form method="post" enctype="multipart/form-data">
-        <p>Выберите директорию с соответствующими наборами данных</p>
+        <p>Choose directory with dataset</p>
         <input type="file" name="file[]" class="input" id="ctrl" webkitdirectory directory multiple/>
-        <button class="menu_btn">Подтвердить</button>
+        <button class="menu_btn">Submit</button>
     </form>
 </div>
 {% if im_path %}
@@ -13,7 +13,7 @@
         <img class="analysis_img" src="{{url_for('static', filename='analysis_images/' + im_path)}}">
     </div>
     <div class="tab" style="width: 20%;display: flex; flex-direction: column;">
-        <h3>Информация о датасете</h3>
+        <h3>Dataset Info</h3>
         {% for item in meta_dict %}
             <p><b>{{item}}</b>: {{meta_dict[item]}}</p>
         {% endfor %}
